--- a/ccs_workspace/rogue_badge_2023/.cproject
+++ b/ccs_workspace/rogue_badge_2023/.cproject
@@ -50,6 +50,13 @@
 								<option id="com.ti.ccstudio.buildDefinitions.MSP430_21.6.compilerID.DIAG_WRAP.1683391961" name="Wrap diagnostic messages (--diag_wrap)" superClass="com.ti.ccstudio.buildDefinitions.MSP430_21.6.compilerID.DIAG_WRAP" useByScannerDiscovery="false" value="com.ti.ccstudio.buildDefinitions.MSP430_21.6.compilerID.DIAG_WRAP.off" valueType="enumerated"/>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.ti.ccstudio.buildDefinitions.MSP430_21.6.compilerID.INCLUDE_PATH.848972368" name="Add dir to #include search path (--include_path, -I)" superClass="com.ti.ccstudio.buildDefinitions.MSP430_21.6.compilerID.INCLUDE_PATH" valueType="includePath">
 									<listOptionValue builtIn="false" value="${CCS_BASE_ROOT}/msp430/include"/>
+									<listOptionValue builtIn="false" value="${CCS_PROJECT_DIR}/captivate"/>
+									<listOptionValue builtIn="false" value="${CCS_PROJECT_DIR}/captivate/ADVANCED"/>
+									<listOptionValue builtIn="false" value="${CCS_PROJECT_DIR}/captivate/BASE"/>
+									<listOptionValue builtIn="false" value="${CCS_PROJECT_DIR}/captivate/COMM"/>
+									<listOptionValue builtIn="false" value="${CCS_PROJECT_DIR}/captivate_app"/>
+									<listOptionValue builtIn="false" value="${CCS_PROJECT_DIR}/captivate_config"/>
+									<listOptionValue builtIn="false" value="${CCS_PROJECT_DIR}/mathlib"/>
 									<listOptionValue builtIn="false" value="${CCS_PROJECT_DIR}/driverlib/MSP430FR2xx_4xx"/>
 									<listOptionValue builtIn="false" value="${PROJECT_ROOT}"/>
 									<listOptionValue builtIn="false" value="${CG_TOOL_ROOT}/include"/>
