Update other files and references, and .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-captivate/rogue_badge_2023/src/
-captivate/rogue_badge_2023/CaptivateDesignCenter.ser.bak
+captivate/booper.badge.lgbt/src/
+captivate/booper.badge.lgbt/CaptivateDesignCenter.ser.bak
+.python-version
