--- a/ccs_workspace/.gitignore
+++ b/ccs_workspace/.gitignore
@@ -1,5 +1,5 @@
 /.metadata/
-rogue_badge_2023/.launches
-rogue_badge_2023/Debug
+booper.badge.lgbt/.launches
+booper.badge.lgbt/Debug
 .jxbrowser.userdata
 RemoteSystemsTempFiles
