--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ captivate/booper.badge.lgbt/CaptivateDesignCenter.ser.bak
 .python-version
 captivate/booper.badge.lgbt_captivate/.plotProps
 captivate/booper.badge.lgbt_captivate/CaptivateDesignCenter.ser.bak
+programming/code_and_cinit.txt
