--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ captivate/booper.badge.lgbt/CaptivateDesignCenter.ser.bak
 captivate/booper.badge.lgbt_captivate/.plotProps
 captivate/booper.badge.lgbt_captivate/CaptivateDesignCenter.ser.bak
 programming/code_and_cinit.txt
+programming/.infoa.tmp.txt
+programming/Log/
