Ignore a file I use to test with.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ captivate/booper.badge.lgbt_captivate/CaptivateDesignCenter.ser.bak
 programming/code_and_cinit.txt
 programming/.infoa.tmp.txt
 programming/Log/
+programming/test.txt
